language/move-prover/tests/sources/functional/loops.exp
Move prover returns: exiting with boogie verification errors
error: abort not covered by any of the `aborts_if` clauses

    ┌── tests/sources/functional/loops.move:86:5 ───
    │
 86 │ ╭     spec fun iter10_abort_incorrect { // Disproved. Abort always happens.
 87 │ │         pragma verify=true;
 88 │ │         aborts_if false;
 89 │ │     }
    │ ╰─────^
    ·
 82 │             if (i == 7) abort 7;
    │                         ------- abort happened here with code 0x7
    │
    =     at tests/sources/functional/loops.move:77: iter10_abort_incorrect
    =     at tests/sources/functional/loops.move:79: iter10_abort_incorrect
    =     at tests/sources/functional/loops.move:77: iter10_abort_incorrect
    =         i = <redacted>
    =     at tests/sources/functional/loops.move:79: iter10_abort_incorrect
    =     at tests/sources/functional/loops.move:82: iter10_abort_incorrect
    =         ABORTED

error: function does not abort under this condition

    ┌── tests/sources/functional/loops.move:58:9 ───
    │
 58 │         aborts_if true;
    │         ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/loops.move:48: iter10_no_abort_incorrect
    =     at tests/sources/functional/loops.move:50: iter10_no_abort_incorrect
    =     at tests/sources/functional/loops.move:48: iter10_no_abort_incorrect
    =         i = <redacted>
    =     at tests/sources/functional/loops.move:50: iter10_no_abort_incorrect
    =     at tests/sources/functional/loops.move:56: iter10_no_abort_incorrect
    =     at tests/sources/functional/loops.move:58
